# Document-Workflow-System

./: pyproject.toml
.github/ISSUE_TEMPLATE/: feature.md
authentication/: exceptions.py  mailing.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py  0002_add_db_level_cascade.py
authentication/services/: mailing.py
authentication/templates/emails/: verification_email.html  verification_email.txt
authentication/tests/integration/: test_password_endpoints.py
authentication/tests/unit/: test_serializers.py
authentication/tests/unit/serializers/: email.py  password_auth.py
config/: celery.py  settings.py  urls.py
